--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap');
+
+body {
+  // background: rgb(117,117,117);
+  // background: linear-gradient(180deg, rgba(117,117,117,1) 0%, rgba(255,255,255,1) 100%) no-repeat;
+  font-family: 'Montserrat', sans-serif;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
