--- a/src/app/components/converter-block/converter-block.component.html
+++ b/src/app/components/converter-block/converter-block.component.html
@@ -1,1 +1,31 @@
-<p>converter-block works!</p>
+<div class="converter">
+  <div class="converter__item">
+    <mat-form-field appearance="outline" >
+      <mat-label>Exchange value</mat-label>
+      <input matInput type="number" #valueFrom (input)="inOrderExchange()">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Currency From</mat-label>
+      <mat-select [(value)]="selectedFrom">
+        <mat-option *ngFor="let label of currenciesLabel" [value]="label" #fromCurrency>
+          {{label}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="converter__item">
+    <mat-form-field appearance="outline" >
+      <mat-label>Exchange value</mat-label>
+      <input matInput type="number" #valueTo>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Currency To</mat-label>
+      <mat-select [(value)]="selectedTo">
+        <mat-option *ngFor="let label of currenciesLabel" [value]="label" #toCurrency>
+          {{label}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</div>
+ 
