--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,11 +1,12 @@
-.header {
-  padding: 10px;
+.rate {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
 
-  &__title {
-    font-size: 2em;
-    font-weight: 700;
-  }
+.title {
+  font-size: 2em;
+  font-weight: 700;
+  text-align: center;
+  margin: 10px 0 20px;
 }
