--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -4,6 +4,9 @@
     <app-display [currency]="currency"></app-display>
   </div>
 </div> 
-<div class="main">
+<main class="main">
   <app-converter-block [currencies]="currencies"></app-converter-block>
-</div>
+</main>
+<footer class="footer">
+  <p class="powered">Powered by <img src="./../../../assets/privatbank.png"></p>
+</footer>
