--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap');
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap');
 
 body {
-  // background: rgb(117,117,117);
-  // background: linear-gradient(180deg, rgba(117,117,117,1) 0%, rgba(255,255,255,1) 100%) no-repeat;
   font-family: 'Montserrat', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  margin: 0;
 }
 
