--- a/src/app/components/converter-block/converter-block.component.scss
+++ b/src/app/components/converter-block/converter-block.component.scss
@@ -1,11 +1,34 @@
 .converter {
-  width: 80%;
   margin: 50px auto;
   display: flex;
   justify-content: space-around;
+  background-color: #fff;
+  border-radius: 30px;
+  -webkit-box-shadow: 0px 0px 17px 0px #000000; 
+  box-shadow: 0px 0px 17px 0px #000000;
+  padding: 30px;
+  flex-wrap: wrap;
 
   &__item {
     display: flex;
     flex-direction: column;
   }
+}
+
+mat-form-field {
+  width: 160px;
+}
+
+.icon {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+mat-icon {
+  color: #fff;
+  background-color: #000000;
+  padding: 5px;
+  border-radius: 3px;
+  cursor: pointer;
 }
