--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -8,5 +8,23 @@
   font-size: 2em;
   font-weight: 700;
   text-align: center;
-  margin: 10px 0 20px;
+  margin: 10px 0 50px;
+  color: #fff;
+  text-shadow: 0px 2px 3px #000000;
+  letter-spacing: 1px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  color: #fff;
+
+  .powered {
+    margin: 0;
+  }
+
+  img {
+    width: 140px;
+    margin-left: 5px;
+  }
 }
